Layout issues fix (or at least an attempt?)

--- a/_includes/2016_css/agency.css
+++ b/_includes/2016_css/agency.css
@@ -1,3 +1,5 @@
+
+
 /*!
  * Start Bootstrap - Agency Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
@@ -118,6 +120,7 @@ aside.clients,
     background-color: #{{ site.data.template.color.primary }};
 }
 
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
@@ -170,10 +173,14 @@ fieldset[disabled] .btn-primary.active {
     font-weight: 700;
 }
 
+.buttons-grouped-home {
+    margin-top: 20px;
+}
+
 .btn-sm, .btn-xl {
     color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
-    border-color: #{{ site.data.template.color.primary }};
+    background-color: #{{ site.data.template.color.secondary-dark }};
+    border-color: #{{ site.data.template.color.secondary-dark }};
     border-radius: 3px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
@@ -346,6 +353,7 @@ header {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    min-height: 540px;
 }
 
 header .intro-text {
@@ -380,7 +388,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {    
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 200px;
         padding-bottom: 200px;
     }
 
@@ -977,4 +985,51 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
+}
+
+@media (max-width: 1200px) {
+    .navbar-container{
+        margin-right: 0px;
+        margin-left: 0px;
+        width: 100%;
+    }
+}
+
+@media (max-height: 760px) {
+    header .container .intro-text {
+        padding-top: 150px;
+        padding-bottom: 150px;
+    }
+    header .container .intro-text .intro-heading {
+        font-size: 40px;
+        line-height: 40px;
+    }
+    header .container .intro-text .intro-lead-in {
+        font-size: 22px;
+        line-height: 22px;
+    }
+    header .container .intro-text .intro-subheading {
+        font-size: 16px;
+        line-height: 16px;
+    }
+    .btn-sm, .btn-xl {
+        border-radius: 0px;
+        font-size: 16px;
+    }
+    
+    .btn-xl {
+        padding: 10px 20px;
+        font-size: 12px;
+        font-weight: 700;
+    }
+
+    .btn-sm {
+        padding: 5px 10px;
+        font-size: 8px;
+        font-weight: 700;
+    }
+    .buttons-grouped-home {
+        margin-top: 10px;
+    }
+
 }
